# futures-rs

./: Cargo.toml
examples/functional/: Cargo.toml
examples/functional/src/: main.rs
examples/imperative/: Cargo.toml
examples/imperative/src/: main.rs
futures/: Cargo.toml
futures-channel/: Cargo.toml
futures-channel/src/: lock.rs  oneshot.rs
futures-channel/src/mpsc/: mod.rs  queue.rs
futures-channel/tests/: mpsc-close.rs  mpsc.rs  oneshot.rs
futures-core/: Cargo.toml
futures-executor/: Cargo.toml
futures-executor/src/: lib.rs  local_pool.rs  thread_pool.rs
futures-executor/tests/: local_pool.rs
futures-io/: Cargo.toml
futures-macro/: Cargo.toml
futures-macro/src/: executor.rs  select.rs  stream_select.rs
futures-sink/: Cargo.toml
futures-task/: Cargo.toml
futures-task/src/: lib.rs
futures-test/: Cargo.toml
futures-test/src/: track_closed.rs
futures-test/src/task/: mod.rs
futures-util/: Cargo.toml
futures-util/benches/: select.rs
futures-util/src/: abortable.rs  lib.rs
futures-util/src/compat/: compat01as03.rs  compat03as01.rs  executor.rs
futures-util/src/future/: join.rs  join_all.rs  mod.rs  try_join.rs  try_join_all.rs
futures-util/src/future/future/: catch_unwind.rs  mod.rs  remote_handle.rs  shared.rs
futures-util/src/future/try_future/: mod.rs
futures-util/src/io/: buf_reader.rs  chain.rs  copy.rs  copy_buf_abortable.rs  mod.rs  read_to_end.rs
futures-util/src/lock/: mutex.rs
futures-util/src/sink/: buffer.rs  fanout.rs  mod.rs
futures-util/src/stream/: abortable.rs  futures_ordered.rs  mod.rs  once.rs  poll_immediate.rs  select.rs  select_all.rs  select_with_strategy.rs
futures-util/src/stream/futures_unordered/: iter.rs  task.rs
futures-util/src/stream/stream/: buffer_unordered.rs  buffered.rs  catch_unwind.rs  flatten_unordered.rs  fuse.rs  mod.rs  ready_chunks.rs  take_until.rs
futures-util/src/stream/try_stream/: mod.rs  try_buffer_unordered.rs  try_buffered.rs  try_concat.rs  try_flatten_unordered.rs  try_ready_chunks.rs
futures-util/src/task/: mod.rs
futures/src/: lib.rs
futures/tests/: async_await_macros.rs  bilock.rs  compat.rs  eventual.rs  future_abortable.rs  future_join_all.rs  future_shared.rs  future_try_flatten_stream.rs  future_try_join_all.rs  io_buf_reader.rs  io_read_line.rs  lock_mutex.rs  sink.rs  stream.rs  stream_abortable.rs  stream_futures_ordered.rs  stream_futures_unordered.rs  stream_peekable.rs  stream_select_all.rs  stream_try_stream.rs  task_atomic_waker.rs
futures/tests/macro-reexport/: Cargo.toml
futures/tests/macro-tests/: Cargo.toml
futures/tests/no-std/: Cargo.toml
