[workspace]
resolver = "3"
members = [
  "futures",
  "futures-core",
  "futures-channel",
  "futures-executor",
  "futures-io",
  "futures-macro",
  "futures-sink",
  "futures-task",
  "futures-util",
  "futures-test",

  "futures/tests/macro-tests",
  "futures/tests/macro-reexport",
  "futures/tests/no-std",

  "examples/functional",
  "examples/imperative",
]

[workspace.package]
edition = "2024"
rust-version = "1.93"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/futures-rs"
homepage = "https://rust-lang.github.io/futures-rs"

[workspace.lints.rust]
missing_debug_implementations = "warn"
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(futures_sanitizer)',
] }
unreachable_pub = "warn"

[workspace.lints.clippy]
incompatible_msrv = { level = "allow", priority = 1 }

[workspace.dependencies]
# Internal crates
futures = { version = "=0.4.0-alpha.0", path = "futures", default-features = false }
futures-core = { version = "=1.0.0-alpha.0", path = "futures-core", default-features = false }
futures-channel = { version = "=0.4.0-alpha.0", path = "futures-channel", default-features = false }
futures-executor = { version = "=0.4.0-alpha.0", path = "futures-executor", default-features = false }
futures-io = { version = "0.3.31", path = "futures-io", default-features = false }
futures-sink = { version = "=0.4.0-alpha.0", path = "futures-sink", default-features = false }
futures-task = { version = "=0.4.0-alpha.0", path = "futures-task", default-features = false }
futures-util = { version = "=0.4.0-alpha.0", path = "futures-util", default-features = false }
futures-macro = { version = "=0.4.0-alpha.0", path = "futures-macro", default-features = false }
futures-test = { version = "=0.4.0-alpha.0", path = "futures-test" }
macro-reexport = { version = "=0.0.0", path = "futures/tests/macro-reexport" }
futures04 = { version = "=0.4.0-alpha.0", path = "futures", package = "futures" }

# External crates
assert_matches = "1.5.0"
libc = "0.2.181"
memchr = "2.8"
pin-project = "1.1.10"
pin-project-lite = "0.2.16"
portable-atomic = { version = "1.13", default-features = false, features = ["require-cas"] }
proc-macro2 = "1.0.106"
quote = "1.0"
slab = { version = "0.4.12", default-features = false }
spin = "0.10.0"
static_assertions = "1"
syn = { version = "2.0.115", features = ["full"] }
tokio = "1.49.0"
tokio-io = "0.1.13"
futures_01 = { version = "0.1", package = "futures" }

[patch.crates-io]
tokio = { git = "https://github.com/earthlings-dev/tokio.git" }
