[package]
name = "futures-channel"
version = "0.4.0-alpha.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = """
Channels for asynchronous communication using futures-rs.
"""

[features]
default = ["std"]
std = ["alloc", "futures-core/std"]
alloc = ["futures-core/alloc"]
sink = ["dep:futures-sink"]

[dependencies]
futures-core = { workspace = true }
futures-sink = { workspace = true, optional = true }

[dev-dependencies]
futures = { workspace = true, default-features = true }
futures-test = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
