[package]
name = "futures-core"
version = "1.0.0-alpha.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = """
The core traits and types in for the `futures` library.
"""

[features]
default = ["std"]
std = ["alloc"]
alloc = []
portable-atomic = ["dep:portable-atomic"]

[dependencies]
portable-atomic = { workspace = true, optional = true }

[dev-dependencies]
futures = { workspace = true, default-features = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
