[package]
name = "futures-executor"
version = "0.4.0-alpha.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = """
Executors for asynchronous tasks based on the futures-rs library.
"""

[features]
default = ["std"]
std = ["futures-core/std", "futures-task/std", "futures-util/std"]
thread-pool = ["std"]

[dependencies]
futures-core = { workspace = true }
futures-task = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
futures = { workspace = true, default-features = true, features = ["thread-pool"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
