[package]
name = "futures-sink"
version = "0.4.0-alpha.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = """
The asynchronous `Sink` trait for the futures-rs library.
"""

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[dependencies]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
