[package]
name = "futures-task"
version = "0.4.0-alpha.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = """
Tools for working with tasks.
"""

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[dependencies]

[dev-dependencies]
futures = { workspace = true, default-features = true }

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
