[package]
name = "futures-test"
version = "0.4.0-alpha.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = """
Common utilities for testing components built off futures-rs.
"""

[dependencies]
futures-core = { workspace = true }
futures-task = { workspace = true }
futures-io = { workspace = true }
futures-util = { workspace = true }
futures-executor = { workspace = true }
futures-sink = { workspace = true }
futures-macro = { workspace = true }
pin-project = { workspace = true }

[dev-dependencies]
futures = { workspace = true, features = ["std", "executor"] }

[features]
default = ["std"]
std = ["futures-core/std", "futures-task/std", "futures-io/std", "futures-util/std", "futures-util/io", "futures-executor/std"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
