[package]
name = "futures-util"
version = "0.4.0-alpha.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = """
Common utilities and extension traits for the futures-rs library.
"""

[features]
default = ["std", "async-await", "async-await-macro"]
std = ["alloc", "futures-core/std", "futures-task/std", "slab/std"]
alloc = ["futures-core/alloc", "futures-task/alloc", "dep:slab"]
async-await = []
async-await-macro = ["async-await", "dep:futures-macro"]
compat = ["std", "dep:futures_01", "dep:libc"]
io-compat = ["io", "compat", "dep:tokio-io", "dep:libc"]
sink = ["dep:futures-sink"]
io = ["std", "dep:futures-io", "dep:memchr"]
channel = ["std", "dep:futures-channel"]
portable-atomic = ["futures-core/portable-atomic"]
spin = ["dep:spin"]

# Unstable features
# These features are outside of the normal semver guarantees and require the
# `unstable` feature as an explicit opt-in to unstable API.
unstable = []
bilock = []
write-all-vectored = ["io"]

[dependencies]
futures-core = { workspace = true }
futures-task = { workspace = true }
futures-channel = { workspace = true, features = ["std"], optional = true }
futures-io = { workspace = true, features = ["std"], optional = true }
futures-sink = { workspace = true, optional = true }
futures-macro = { workspace = true, optional = true }
slab = { workspace = true, optional = true }
memchr = { workspace = true, optional = true }
futures_01 = { workspace = true, optional = true }
tokio-io = { workspace = true, optional = true }
pin-project-lite = { workspace = true }
spin = { workspace = true, optional = true }
libc = { workspace = true, optional = true }

[dev-dependencies]
futures = { workspace = true, default-features = true, features = ["async-await", "thread-pool"] }
futures-test = { workspace = true }
tokio = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
