[package]
name = "futures"
version = "0.4.0-alpha.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../README.md"
keywords = ["futures", "async", "future"]
description = """
An implementation of futures and streams featuring zero allocations,
composability, and iterator-like interfaces.
"""
categories = ["asynchronous"]

[dependencies]
futures-core = { workspace = true }
futures-task = { workspace = true }
futures-channel = { workspace = true, features = ["sink"] }
futures-executor = { workspace = true, optional = true }
futures-io = { workspace = true }
futures-sink = { workspace = true }
futures-util = { workspace = true, features = ["sink"] }

[dev-dependencies]
futures-executor = { workspace = true, default-features = true, features = ["thread-pool"] }
futures-test = { workspace = true }
futures_01 = { workspace = true }
assert_matches = { workspace = true }
pin-project = { workspace = true }
static_assertions = { workspace = true }
tokio = { workspace = true }

[features]
default = ["std", "async-await", "executor"]
std = ["alloc", "futures-core/std", "futures-task/std", "futures-io/std", "futures-sink/std", "futures-util/std", "futures-util/io", "futures-util/channel"]
alloc = ["futures-core/alloc", "futures-task/alloc", "futures-sink/alloc", "futures-channel/alloc", "futures-util/alloc"]
async-await = ["futures-util/async-await", "futures-util/async-await-macro"]
compat = ["std", "futures-util/compat"]
io-compat = ["compat", "futures-util/io-compat"]
executor = ["std", "futures-executor/std"]
thread-pool = ["executor", "futures-executor/thread-pool"]
spin = ["futures-util/spin"]

# Unstable features
# These features are outside of the normal semver guarantees and require the
# `unstable` feature as an explicit opt-in to unstable API.
unstable = ["futures-io/unstable", "futures-util/unstable"]
bilock = ["futures-util/bilock"]
write-all-vectored = ["futures-util/write-all-vectored"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
features = ["std", "async-await", "compat", "io-compat", "executor", "thread-pool"]

[lints]
workspace = true
