[package]
name = "no-std"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[features]
futures-core = ["dep:futures-core"]
futures-task = ["dep:futures-task"]
futures-channel = ["dep:futures-channel"]
futures-util = ["dep:futures-util"]
futures = ["dep:futures"]
futures-core-alloc = ["futures-core/alloc"]
futures-task-alloc = ["futures-task/alloc"]
futures-channel-alloc = ["futures-channel/alloc"]
futures-util-alloc = ["futures-util/alloc"]
futures-util-async-await = ["futures-util/async-await"]
futures-alloc = ["futures/alloc"]
futures-async-await = ["futures/async-await"]

[dependencies]
futures-core = { workspace = true, optional = true }
futures-task = { workspace = true, optional = true }
futures-channel = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
futures = { workspace = true, optional = true }

[lints]
workspace = true
